--- a/consumer.yml
+++ b/consumer.yml
@@ -1,3 +1,10 @@
+server:
+  port: 0
+
+spring:
+  application:
+    name: consumer
+
 mybatis:
   mapper-locations: classpath:/mapper/*Mapper.xml
   type-aliases-package: com.buck.consumer.entity
